added advanced sample

--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,70 @@ semantickernelsample/obj/Debug/net8.0/semantickernelsample.GlobalUsings.g.cs
 semantickernelsample/obj/Debug/net8.0/semantickernelsample.pdb
 semantickernelsample/obj/Debug/net8.0/ref/semantickernelsample.dll
 semantickernelsample/obj/Debug/net8.0/refint/semantickernelsample.dll
+AdvancedSample/obj/AdvancedSample.csproj.nuget.dgspec.json
+AdvancedSample/obj/AdvancedSample.csproj.nuget.g.props
+AdvancedSample/obj/AdvancedSample.csproj.nuget.g.targets
+AdvancedSample/obj/project.assets.json
+AdvancedSample/obj/project.nuget.cache
+AdvancedSample/obj/Debug/net8.0/.NETCoreApp,Version=v8.0.AssemblyAttributes.cs
+AdvancedSample/obj/Debug/net8.0/AdvancedSample.AssemblyInfo.cs
+AdvancedSample/obj/Debug/net8.0/AdvancedSample.AssemblyInfoInputs.cache
+AdvancedSample/obj/Debug/net8.0/AdvancedSample.assets.cache
+AdvancedSample/obj/Debug/net8.0/AdvancedSample.csproj.AssemblyReference.cache
+AdvancedSample/obj/Debug/net8.0/AdvancedSample.csproj.CopyComplete
+AdvancedSample/obj/Debug/net8.0/AdvancedSample.csproj.CoreCompileInputs.cache
+AdvancedSample/obj/Debug/net8.0/AdvancedSample.csproj.FileListAbsolute.txt
+AdvancedSample/obj/Debug/net8.0/AdvancedSample.dll
+AdvancedSample/obj/Debug/net8.0/AdvancedSample.GeneratedMSBuildEditorConfig.editorconfig
+AdvancedSample/obj/Debug/net8.0/AdvancedSample.genruntimeconfig.cache
+AdvancedSample/obj/Debug/net8.0/AdvancedSample.GlobalUsings.g.cs
+AdvancedSample/obj/Debug/net8.0/AdvancedSample.pdb
+AdvancedSample/obj/Debug/net8.0/apphost
+AdvancedSample/obj/Debug/net8.0/ref/AdvancedSample.dll
+AdvancedSample/obj/Debug/net8.0/refint/AdvancedSample.dll
+AdvancedSample/bin/Debug/net8.0/AdvancedSample
+AdvancedSample/bin/Debug/net8.0/AdvancedSample.deps.json
+AdvancedSample/bin/Debug/net8.0/AdvancedSample.dll
+AdvancedSample/bin/Debug/net8.0/AdvancedSample.pdb
+AdvancedSample/bin/Debug/net8.0/AdvancedSample.runtimeconfig.json
+AdvancedSample/bin/Debug/net8.0/Azure.AI.OpenAI.dll
+AdvancedSample/bin/Debug/net8.0/Azure.Core.dll
+AdvancedSample/bin/Debug/net8.0/Handlebars.dll
+AdvancedSample/bin/Debug/net8.0/Handlebars.Net.Helpers.dll
+AdvancedSample/bin/Debug/net8.0/HandlebarsDotNet.Helpers.Core.dll
+AdvancedSample/bin/Debug/net8.0/Humanizer.dll
+AdvancedSample/bin/Debug/net8.0/JetBrains.Annotations.dll
+AdvancedSample/bin/Debug/net8.0/Json.More.dll
+AdvancedSample/bin/Debug/net8.0/JsonPointer.Net.dll
+AdvancedSample/bin/Debug/net8.0/JsonSchema.Net.dll
+AdvancedSample/bin/Debug/net8.0/JsonSchema.Net.Generation.dll
+AdvancedSample/bin/Debug/net8.0/Microsoft.Bcl.AsyncInterfaces.dll
+AdvancedSample/bin/Debug/net8.0/Microsoft.Bcl.HashCode.dll
+AdvancedSample/bin/Debug/net8.0/Microsoft.Extensions.AI.Abstractions.dll
+AdvancedSample/bin/Debug/net8.0/Microsoft.Extensions.DependencyInjection.Abstractions.dll
+AdvancedSample/bin/Debug/net8.0/Microsoft.Extensions.DependencyInjection.dll
+AdvancedSample/bin/Debug/net8.0/Microsoft.Extensions.Logging.Abstractions.dll
+AdvancedSample/bin/Debug/net8.0/Microsoft.Extensions.VectorData.Abstractions.dll
+AdvancedSample/bin/Debug/net8.0/Microsoft.SemanticKernel.Abstractions.dll
+AdvancedSample/bin/Debug/net8.0/Microsoft.SemanticKernel.Connectors.AI.OpenAI.dll
+AdvancedSample/bin/Debug/net8.0/Microsoft.SemanticKernel.Connectors.AzureOpenAI.dll
+AdvancedSample/bin/Debug/net8.0/Microsoft.SemanticKernel.Connectors.OpenAI.dll
+AdvancedSample/bin/Debug/net8.0/Microsoft.SemanticKernel.Core.dll
+AdvancedSample/bin/Debug/net8.0/Microsoft.SemanticKernel.dll
+AdvancedSample/bin/Debug/net8.0/Microsoft.SemanticKernel.Planners.Handlebars.dll
+AdvancedSample/bin/Debug/net8.0/Microsoft.SemanticKernel.Planners.OpenAI.dll
+AdvancedSample/bin/Debug/net8.0/Microsoft.SemanticKernel.Plugins.Memory.dll
+AdvancedSample/bin/Debug/net8.0/Microsoft.SemanticKernel.PromptTemplates.Handlebars.dll
+AdvancedSample/bin/Debug/net8.0/Microsoft.SemanticKernel.Yaml.dll
+AdvancedSample/bin/Debug/net8.0/OpenAI.dll
+AdvancedSample/bin/Debug/net8.0/Stef.Validation.dll
+AdvancedSample/bin/Debug/net8.0/System.ClientModel.dll
+AdvancedSample/bin/Debug/net8.0/System.Memory.Data.dll
+AdvancedSample/bin/Debug/net8.0/System.Numerics.Tensors.dll
+AdvancedSample/bin/Debug/net8.0/Tiktoken.Core.dll
+AdvancedSample/bin/Debug/net8.0/Tiktoken.dll
+AdvancedSample/bin/Debug/net8.0/Tiktoken.Encodings.Abstractions.dll
+AdvancedSample/bin/Debug/net8.0/Tiktoken.Encodings.cl100k.dll
+AdvancedSample/bin/Debug/net8.0/Tiktoken.Encodings.o200k.dll
+AdvancedSample/bin/Debug/net8.0/YamlDotNet.dll
+AdvancedSample/Properties/launchSettings copy.json
