--- a/semantickernelsample/semantickernelsample.csproj
+++ b/semantickernelsample/semantickernelsample.csproj
@@ -5,6 +5,8 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <NoWarn>SKEXP0001</NoWarn>
+    <NoWarn>SKEXP0070</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
@@ -13,8 +15,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.SemanticKernel" Version="1.30.0" />
+    <PackageReference Include="Microsoft.SemanticKernel" Version="1.24.1" />
     <PackageReference Include="Microsoft.SemanticKernel.Connectors.AI.OpenAI" Version="1.0.0-beta8" />
+    <PackageReference Include="Microsoft.SemanticKernel.Connectors.Ollama" Version="1.24.1-alpha" />
     <PackageReference Include="Microsoft.SemanticKernel.Planners.Handlebars" Version="1.7.1-preview" />
     <PackageReference Include="Microsoft.SemanticKernel.Planners.OpenAI" Version="1.7.1-preview" />
     <PackageReference Include="Tiktoken" Version="2.0.3" />
